--- a/templates/edit.html
+++ b/templates/edit.html
@@ -127,7 +127,7 @@
         </a>
       </li>
       <li>
-        <a href="/login">
+        <a href="/login" onclick="noBack()">
           <span class="icon"><i class="mdi mdi-lock"></i></span>
           <span class="menu-item-label">Logout</span>
         </a>
@@ -151,12 +151,14 @@
               <input type="text" class="form-control" id="category_name" name="category_name" value="{{ user[1] }}">
             </label>
           </div>
+          <p class="help">Please enter only Alphabets</p>
           <br>
           <div class="form-group">
             <label for="image" class="label"><h1 class="label">Category Image</h1>
-              <input type="file" class="form-control" name="image" id="image" value="{{ user[2] }}" accept="image/png, image/jpeg">
+              <input type="file" class="form-control" name="image" id="image" value="{{ user[2] }}" accept="image/png, image/jpeg, image/webp">
             </label>
           </div>
+          <p class="help">Select only png, jpeg and webp files and size lessthen 5 mb</p>
         <br>
         <div class="field grouped">
           <div class="control">
@@ -186,12 +188,15 @@
             <input type="text" class="form-control " name="sub_category" id="sub_category" placeholder="Enter sub category"  value="{{ user[3] }}">
           </label>
         </div>
+        <p class="help">Please enter only Alphabets</p>
         <br>
         <div class="form-group">
           <label for="sub_category_image" class="label"><h2>sub category image</h2>
-            <input type="file" class="form-control" name="sub_category_image" id="sub_category_image"  value="{{ user[4] }}" accept="image/png, image/jpeg">
+            <input type="file" class="form-control" name="sub_category_image" id="sub_category_image"  value="{{ user[4] }}" accept="image/png, image/jpeg, image/webp">
           </label>
-        </div><br>
+        </div>
+        <p class="help">Select only png, jpeg and webp files and size lessthen 5 mb</p>
+        <br>
         <div class="field grouped">
           <button type="submit" class="button green" formaction="">Submit</button>
         </div>
@@ -217,6 +222,43 @@
   fbq('track', 'PageView');
 </script> -->
 
+<!-- Image validation function -->
+<script>
+  Filevalidation = () => {
+      const fi = document.getElementById('image');
+      // Check if any file is selected.
+      if (fi.files.length > 0) {
+          for (const i = 0; i <= fi.files.length - 1; i++) {
+
+              const fsize = fi.files.item(i).size;
+              const file = Math.round((fsize / 1024));
+              // The size of the file.
+              if (file >= 4096) {
+                  alert(
+                    "File too Big, please select a file less than 5 mb");
+              } else if (file < 2048) {
+                  alert(
+                    "File too small, please select a file greater than 1 mb");
+              } else {
+                  document.getElementById('size').innerHTML = '<b>'
+                  + file + '</b> KB';
+              }
+          }
+      }
+  }
+</script>
+
+<!-- Logout and block previous page  -->
+<script type="text/javascript">
+  function noBack()
+   {
+       window.history.forward()
+   }
+  noBack();
+  window.onload = noBack;
+  window.onpageshow = function(evt) { if (evt.persisted) noBack() }
+  window.onunload = function() { void (0) }
+</script>
 
 <script>
   function showSub() {
